--- a/doc/package.json
+++ b/doc/package.json
@@ -10,6 +10,7 @@
         "@vitejs/plugin-vue": "^4.1.0",
         "autoprefixer": "^10.4.14",
         "d3z": "file:../",
+        "path": "^0.12.7",
         "tailwindcss": "^3.3.1",
         "vite": "^4.2.0",
         "vue": "^3.2.36"
