--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite": "^4.2.0"
     },
     "dependencies": {
+        "d3-time-format": "^4.1.0",
         "stats.js": "^0.17.0"
     }
 }
